--- a/style/index.css
+++ b/style/index.css
@@ -29,6 +29,16 @@ form {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16px;
 }
+
+.input-date {
+	margin-bottom: 15px;
+	border: 1px solid #ddd;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 16px;
+	padding: 10px;
+	border-radius: 5px;
+}
+
 textarea {
 	height: 150px;
 }
